# langgraph-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  cli_tasks.json  package-lock.json  pyproject.toml  pytest.ini  server.py  workflows.json
.claude/: settings.local.json
.opencode/plans/: alignment-supplement-v2.md
docs/: agent-architecture-notes.md  context_design.md  enterprise-platform-optimization-plan.md  langchain-langgraph-deepagents-guide.md  metrics-observability-plan.md  practical-guide.md  research-enterprise-agent-architecture.md  task-plan-product-operations.md
docs/architecture/: OPTIMIZATION.md  agent-flow-design.md  alignment-plan.md  design-spec.md
docs/context/: context-design.md  context-log-diagnosis.py
docs/tasks/: TASK-context-gap-fix.md  TASK-doc-alignment.md  TASK-message-deduplication.md  TASK-pc-automation-research.md  TASK-project-improvement-plan.md  TASK-rect-agent-migration.md  TASK-rect-agent-phase1-improvements.md
logs/: context-verify-20260517-165213.jsonl  context-verify-20260517-165341.jsonl  context-verify-20260517-165420.jsonl  context-verify-20260517-165530.jsonl  context-verify-20260517-165606.jsonl  context-verify-20260517-174413.jsonl  context-verify-20260517-174652.jsonl  context-verify-20260517-175107.jsonl
plans/: ecommerce-order-management.md
scripts/: add_agents.py
src/agent/: __init__.py  acp_client.py  acp_server.py  acp_stdio_client.py  agent.py  audit_log.py  audit_logger.py  config.py  cost_calculator.py  event_bus.py  event_callback.py  graceful_degradation.py  (+22 more)
test_files/: start_acp.py  test_acp_stdio.py  test_api.py  test_batch.py  test_cmd.py  test_encoding.py  test_env.py  test_integration.py  test_list.py  test_newline.py  test_npx.py  test_npx2.py  test_opencode.py  test_quotes.py  test_quotes2.py  test_variants.py
tests/: conftest.py  test_acp.py  test_agent_lifecycle.py  test_agent_resume.py  test_agent_routing.py  test_agent_state.py  test_compression.py  test_config.py  test_context_integration.py  test_error_envelope.py  test_graceful_degradation.py  test_human_in_loop.py  test_long_term.py  test_metrics.py  test_multi_agent.py  test_multi_turn_real.py  test_orchestrator_checkpoint.py  test_rate_limiter.py  test_rect_agent.py  test_retry_alignment.py  test_structured_catch.py  test_supervisor.py  test_task_classifier.py  test_tool_cleanup.py  test_tool_persistence.py  test_tool_results.py  test_user_profile.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
(+80 files in other folders)
