[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-agent"
version = "0.1.0"
description = "Production-grade agent built on LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-supervisor>=0.0.31",
    "deepagents>=0.1.0",
    "langchain-openai",
    "langsmith",
    "pydantic>=2.0",
    "pydantic-settings",
    "tiktoken",
    "chromadb",
    "sqlite-utils",
    "python-dotenv",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0",
]
automation = [
    "pyautogui>=0.9.54",
    "Pillow>=10.0.0",
    "pywin32>=306",
]
browser = [
    "browser-use>=0.12.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python-version = "3.11"
strict = true

[tool.pytest]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/agent"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]